# conversor-dominio-x-globus

./: .gitignore  env.json  pyproject.toml  sql_search_fields.sql
layout/: layout_globus.xlsx  ~$layout_globus.xlsx
notebooks/: relacao_colaboradores.ipynb  relacao_eventos_de_para.ipynb
src/extrator/: __main__.py  extract_data.py  extract_movimentacao_folha.py  loop_sqls.py
src/sqls/: _modelo.sql  afastamento.sql  dependentes.sql  desligamento.sql  empresas.sql  eventos.sql  exportacao_movimentacao_folha.sql  funcao.sql  funcionarios.sql  historico_ferias.sql  historico_financeiro.sql  historico_financeiro_13.sql  historico_salarial.sql  pro_labore.sql
