[tool.poetry]
name = "conversor-dominio-x-transnet"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "conversor_dominio_x_transnet"}]

[tool.poetry.dependencies]
python = "^3.9"
pyodbc = "^4.0.35"
pandas = "^1.5.2"
ipykernel = "^6.19.2"
xlrd = "^2.0.1"
openpyxl = "^3.0.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^0.991"
flake8 = "^6.0.0"
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
